2011-01-02  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r74847.
        http://trac.webkit.org/changeset/74847
        https://bugs.webkit.org/show_bug.cgi?id=51803

        "Preprocessor guards should be in header files" (Requested by
        ap on #webkit).

        * bindings/js/JSDOMWindowBase.cpp:
        * dom/Document.cpp:
        (WebCore::Document::recalcStyle):
        * html/HTMLDocument.cpp:
        * loader/FrameLoader.cpp:
        * loader/ResourceLoadNotifier.cpp:
        * page/Chrome.cpp:
        * page/Console.cpp:
        * page/ContextMenuController.cpp:
        * page/DOMWindow.cpp:
        (WebCore::DOMWindow::dispatchEvent):
        * page/EventHandler.cpp:
        * page/Page.cpp:
        * storage/Database.cpp:
        * workers/AbstractWorker.cpp:
        * workers/DefaultSharedWorkerRepository.cpp:
        * workers/SharedWorker.cpp:
        * workers/Worker.cpp:
        * workers/WorkerContext.cpp:
        * workers/WorkerMessagingProxy.cpp:
        * xml/XMLHttpRequest.cpp:
        (WebCore::XMLHttpRequest::callReadyStateChangeListener):

2011-01-02  Patrick Gansterer  <paroga@webkit.org>

        [CMake] Unreviewed build fix.

        * CMakeLists.txt:

2011-01-02  Dirk Schulze  <krit@webkit.org>

        Reviewed by Simon Fraser.

        Clarify ImageBuffer and ImageData relationship
        https://bugs.webkit.org/show_bug.cgi?id=51297

        Remove references to ImageData and CanvasPixelArray from ImageBuffer and SVG filter/masker code,
        since this was a layering violation, and replaced it by ByteArray.

        No change of functionality, so no new test added.

        * html/ImageData.cpp:
        (WebCore::ImageData::create):
        (WebCore::ImageData::ImageData):
        * html/ImageData.h: Added new constructor with ByteArray input.
        (WebCore::ImageData::width):
        (WebCore::ImageData::height):
        (WebCore::ImageData::data):
        * html/canvas/CanvasPixelArray.cpp: