@@ -1,3 +1,10 @@
+2011-01-02  Patrick Gansterer  <paroga@webkit.org>
+
+        Unreviewed WinCE build fix for r74868.
+
+        * platform/graphics/wince/ImageBufferWinCE.cpp:
+        (WebCore::getImageData):
+
 2011-01-02  Sheriff Bot  <webkit.review.bot@gmail.com>
 
         Unreviewed, rolling out r74847.
